# typed-config

./: README  typed-config.cabal
System/Environment/: TypedConfig.hs
